style.css
/* ... */
* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
}
:root {
  --mainbg: rgb(0, 0, 0);
  --sectionbg: #121212;
  --secbordercolor: rgb(85, 85, 85);
  --section2partcolor: rgb(60, 59, 59);
  --bghover: linear-gradient(
    rgba(24, 24, 24, 0.144),
    rgba(128, 128, 128, 0.308)
  );
}
body {
  background-color: var(--mainbg);
  padding: 7px 15px 0 15px;
}
.container {
  display: grid;
  width: 99vw;
  height: 99vh;
  grid-template-columns: 23% 76%;
  grid-template-rows: 21% 68% 8%;
  gap: 10px;
}
.section1 {
  grid-row: 1/2;
  grid-column: 1/2;
  width: 100%;
  height: 100%;
  border: 1px solid var(--secbordercolor);
  border-radius: 10px;
  background-color: var(--sectionbg);
  display: grid;
  grid-template-rows: 1fr 1fr 1fr;
  grid-template-columns: 50px 90px;
  padding: 20px 0 0 20px;
}
.icon1 {
  grid-row: 1/2;
  grid-column: 1/3;
  width: 100%;
  height: 100%;
}
.icon1 svg {
  width: 100%;
  height: 100%;
  fill: white;
}
.ihome svg {
  grid-row: 2/3;
  grid-column: 1/2;
  fill: white;
  width: 60%;
  height: 50%;
  margin: 15px 10px 10px 10px;
}
.icon2_A {
  grid-row: 2/3;
  grid-column: 2/3;
  text-decoration: none;
  color: white;
  font-size: 20px;
  font-weight: 600;
  width: 100%;
  height: 90%;
  margin: 20px 20px 20px 4px;
}
.icon3 svg {
  grid-row: 3/4;
  grid-column: 1/2;
  width: 60%;
  height: 50%;
  fill: white;
  margin: 0 10px 10px 10px;
}
.icon3_A {
  grid-row: 3/4;
  grid-column: 2/3;
  text-decoration: none;
  color: white;
  font-size: 20px;
  font-weight: 600;
  width: 100%;
  height: 90%;
  margin: 0 20px 20px 4px;
}

/* ====================Section2======================= */

.section2 {
  grid-row: 2/3;
  grid-column: 1/2;
  background-color: var(--sectionbg);
  width: 100%;
  height: 100%;
  border: 1px solid var(--secbordercolor);
  border-radius: 10px;
}
.upper {
  width: 100%;
  height: 60%;
  display: grid;
  grid-template-columns: 0.35fr 2.5fr 0.35fr;
  grid-template-rows: 0.75fr 2.15fr 2.15fr;
  gap: 30px;
  padding: 10px;
}
.upper svg {
  fill: white;
  width: 70%;
  height: 60%;
  margin: auto;
}
.upper h3 {
  align-self: center;
  margin-left: 10px;
  color: white;
}
.upper .upart1 {
  grid-row: 2/3;
  grid-column: 1/4;
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  padding: 15px;
  color: white;
  background-color: var(--section2partcolor);
  border-radius: 10px;
}
.upart1 p {
  margin-bottom: 5px;
  font-size: 13px;
}
.upart1 button {
  width: 130px;
  height: 30px;
  border: none;
  border-radius: 40px;
  font-weight: 550;
  font-size: 15px;
}
/* ---------------------------- */
.upper .upart2 {
  grid-column: 1/4;
  grid-row: 3/4;
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  padding: 15px;
  color: white;
  background-color: var(--section2partcolor);
  border-radius: 10px;
}
.upart2 p {
  margin-bottom: 5px;
  font-size: 13px;
}
.upart2 button {
  width: 135px;
  height: 30px;
  border: none;
  border-radius: 40px;
  font-weight: 550;
  font-size: 14px;
  cursor: pointer;
}
/* ----------------------------- */
.lower {
  width: 100%;
  height: 40%;
  display: grid;
  grid-template-columns: 1fr;
  grid-template-rows: 3fr 1fr;
  padding: 40px 20px;
  gap: 26px;
}
.lower .links {
  grid-row: 1/2;
  grid-column: 1/2;
  /* align-self: flex-end; */
  padding-top: 50px;
  padding-bottom: 13px;
  display: flex;
  flex-wrap: wrap;
}
.lower .links a {
  color: white;
  text-decoration: none;
  font-size: 12px;
  margin: 10px;
}
.lower button {
  grid-row: 2/3;
  grid-column: 1/2;
  width: 105px;
  height: 35px;
  background-color: #121212;
  display: grid;
  grid-template-columns: 1fr 4fr;
  grid-template-rows: 1fr;
  color: white;
  border: 1px solid gray;
  border-radius: 30px;
  padding: 0 5px;
}
.lower button svg {
  fill: white;
  width: 100%;
  height: 100%;
  grid-row: 1/2;
  grid-column: 1/2;
  margin: auto;
}
.lower button span {
  font-size: 15px;
  font-weight: 550;
  align-self: center;
  justify-self: center;
}
/* =====================Section3======================= */

.section3 {
  grid-row: 1/3;
  grid-column: 2/3;
  background-color: var(--sectionbg);
  width: 100%;
  height: 100%;
  border: 1px solid var(--secbordercolor);
  border-radius: 10px;
  display: grid;
  grid-template-rows: 0.75fr 4fr 4fr;
  grid-template-columns: 1fr;
}
/* ----------section3 ka head---------- */
.section3_head {
  display: flex;
  justify-content: space-between;
  padding: 0 30px;
  background-color: #161616;
  border-radius: 10px 10px 0 0;
}
/* -------------head mai nav arrows */
.section3_head .arrow {
  width: 120px;
  height: 100%;
  display: flex;
  justify-content: space-evenly;
  align-items: center;
}
.button_arrow_dimension {
  width: 28%;
  height: 45%;
  border-radius: 50%;
  border: none;
  background-color: #000000;
}
.button_arrow_dimension:hover {
  cursor: not-allowed;
}
.button_arrow_dimension svg {
  fill: rgba(255, 255, 255, 0.468);
  width: 40%;
  margin: 9px;
}
/* ---------sign in and login------------ */
.section3_head .login {
  width: 200px;
  height: 100%;
  display: grid;
  grid-template-rows: 1fr;
  grid-template-columns: 40% 60%;
}
.login a {
  text-decoration: none;
  font-weight: 550;
  font-size: 16px;
}
.login .sign {
  justify-self: center;
  align-self: center;
  color: rgb(170, 170, 170);
}
.login .sign:hover {
  color: white;
}
.login button {
  width: 90%;
  height: 70%;
  border: none;
  border-radius: 30px;
  align-self: center;
  justify-self: center;
}
.login button .log {
  color: black;
}
/* --------------Popular_artist */
.popular_artist {
  /* box-shadow: inset 0px 90px 130px 0px #80808040; */
  background-image: linear-gradient(#80808033, #1212129d, #121212);
  display: grid;
  grid-template-rows: 1fr 4fr;
}
/* ... */

